--- a/index.html
+++ b/index.html
@@ -3,10 +3,29 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Balkon-Alarm</title>
+    <title>Abbas Abriss</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            overflow: hidden;
+        }
+        
+        #game-container {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #333;
+        }
+    </style>
   </head>
   <body>
-    <script type="module" src="/src/main.js"></script>
+    <div id="game-container"></div>
+    <!-- Update this path to match where your JavaScript is actually located -->
+    <script src="src/main.js" type="module"></script>
   </body>
 </html>
